--- a/views/pages/Home.ejs
+++ b/views/pages/Home.ejs
@@ -12,9 +12,7 @@
         <main>
             <div class="jumbotron">
                 <h1 class="display-3">Book Database</h1>
-                <div class="lead">by Pisit Keawfung</div>
-                <div>Database : Books</div>
-                <div>Database Collection : Booksdata</div>
+                <div class="lead">by Pisit Keawfung 6030213005</div>
                 <hr>
                 <p>More info</p>
                 <a name="" id="" class="btn btn-primary" href="#" role="button">Let's get started</a>
